--- a/IBAN.html
+++ b/IBAN.html
@@ -39,7 +39,7 @@
            <input type="text" name="iban" id="ibantxt"  style="width:400px;" required>        
            <button onclick="checkIBAN();">Tikrinti</button>
         </div>
-        <div style="width:60%; padding:20px; margin: auto; display:flex; justify-content: space-evenly;">
+        <div style="width:60%; padding:20px; margin: auto; display:flex; justify-content:space-between ;">
             <div>
                 <fieldset style="width:270px; border:solid 1px;">
                     <legend> IBAN informacija </legend> 
