--- a/IBAN.html
+++ b/IBAN.html
@@ -29,7 +29,7 @@
   
 
     <h1 style="text-align:center">IBAN kodo tikrinimas</h1> 
-    <h5 style="text-align:center; color:red;">Tikrinamas tik formato tesingumas, ne pats IBAN numeris [banko uzklausu nera!!!]</h5> 
+    <h5 style="text-align:center; color:red;">Tikrinamas tik formato tesingumas, ne pats IBAN numeris [banko užklausų nėra!!!]</h5> 
     <div>
         <div style="width:60%; padding:20px; margin: auto;">
            <label for="iban"> <b>IBAN numeris :</b> </label>
@@ -49,7 +49,7 @@
         </div>
        
         <h5 style="text-align:left"><pre> 
-            ---------------- PAVYZDZIAI ---------------
+            ---------------- PAVYZDŽIAI ---------------
             2022 m.  <a href="https://en.wikipedia.org/wiki/International_Bank_Account_Number">Wiki IBAN number</a>
             -------------------------------------------
             Belgium	BE71 0961 2345 6769
